--- a/17-03-2022/manish.html
+++ b/17-03-2022/manish.html
@@ -11,6 +11,6 @@
 <body>
     <p>This is inline CSS</p>
     <p class="rt">this is internal css</p>
-    <p>this is external CSS</p>
+    <!-- <p>this is external CSS</p> -->
 </body>
 </html>
