--- a/21-03-2022/animation1css.html
+++ b/21-03-2022/animation1css.html
@@ -22,7 +22,7 @@ div{
 <body>
 <h1>CSS animation</h1>
  <div>animation</div>
-<p><b>NOTE:</b>when an animation is finished it automatically comes in origina state</p>
+<p><b>NOTE:</b>when an animation is finished it automatically comes in original state</p>
 
 
 </body>
